# pymodconn

./: .gitignore  README.md  RUN_MODELONLY.py  config_model.yaml  requirements.txt  setup.cfg  test.ipynb
.gitignore/mod_seq2seq_conn.egg-info/: PKG-INFO  SOURCES.txt
TESTS/: CONN_based_on_biLSTMs_with_Bahdanau_attention.yaml  CONN_based_on_temporal_convolutional_network_with_Bahdanau_attention.yaml  RUN_MODELONLY.py  RUN_tf.py  TEST_COMPILE.py  TEST_COMPILE_TRAIN.py  new_config.yaml
TESTS/saved_models/: MHA_16.37.03.778_modelconfig.yaml  MHA_16.37.03.778_modelsummary.txt  RNN_16.37.11.929_modelconfig.yaml  RNN_16.37.11.929_modelsummary.txt  TCN_16.36.56.366_modelconfig.yaml  TCN_16.36.56.366_modelsummary.txt  test_13.26.08_modelconfig.yaml  test__modelconfig.yaml  test__modelsummary.txt
mod_seq2seq_conn/: model_tfp.py  model_tfp_utils.py
mod_seq2seq_conn.egg-info/: top_level.txt
pymodconn/: Decoder_class_layer.py  Encoder_class_layer.py  MHA_block_class_function.py  RNN_block_class_function.py  TCN_addnorm_class_function.py  __init__.py  attention.py  cit_block.py  configs_init.py  extra_layer.py  keras_tcn.py  major_layers.py  model_gen.py  model_gen_old.py  model_gen_utils.py  positionalenc.ipynb  utils_layers.py
pymodconn/configs/: __init__.py  configs_init.py  create_json_schema.py  default_config.yaml  schema_validation.json
tests/: RUN_MODELONLY.py  config_model.yaml
tests_usage/: CONN_based_on_bi_directional_LSTMs_with_Bahdanau_attention.yaml  CONN_based_on_multi_head_attention.yaml  RUN_MODELONLY.py  config_model.yaml  config_model_test2.yaml  new_config.yaml  test.ipynb  tests.ipynb
tests_usage/saved_models/: Nocustom_models_14.45.34.543_modelsummary.txt  WithCustom_models_15.27.21.073_modelsummary.txt  WithCustom_models_GLU_ADDNORM_15.43.48.663_modelsummary.txt  WithCustom_models_GLU_ADDNORM_19.54.55.812_modelsummary.txt  WithCustom_models_GLU_ADDNORM_20.08.37.867_modelsummary.txt  t2_11.12.49.520_modelsummary.txt  (+16 more)
