[metadata]
name = pymodconn
version = 0.0.4
author = Gaurav Chaudhary
author_email = gaurav.chaudhary@ntnu.no
description =  Develops sequence to sequence control oriented neural networks in a highly modular way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaurav306/pymodconn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True