[metadata]
name = pymodconn
version = 2.0.0
author = Gaurav Chaudhary
author_email = gaurav.chaudhary@ntnu.no
description =  Develops sequence to sequence control-oriented deep neural networks in a highly modular way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaurav306/pymodconn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.7
include_package_data = True